WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69767
Web Inspector: Search in resource crashes when there is no resource with given url.
https://bugs.webkit.org/show_bug.cgi?id=69767
Summary
Web Inspector: Search in resource crashes when there is no resource with give...
Vsevolod Vlasov
Reported
2011-10-10 10:38:56 PDT
Search in resource crashes when there is no resource with given url.
Attachments
Patch
(4.39 KB, patch)
2011-10-17 10:44 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch
(4.38 KB, patch)
2011-10-17 11:54 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-10-17 10:44:06 PDT
Created
attachment 111282
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-17 10:45:44 PDT
Attachment 111282
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource From git://git.webkit.org/WebKit 04b6eb5..dc6dc89 master -> origin/master A LayoutTests/platform/chromium/fast/files/url-required-arguments-expected.txt D LayoutTests/platform/qt/fast/files/url-required-arguments-expected.txt D LayoutTests/fast/files/url-required-arguments-expected.txt A LayoutTests/fast/files/url-required-arguments-expected.txt M LayoutTests/ChangeLog M Source/WebCore/testing/Internals.cpp M Source/WebCore/ChangeLog W: -empty_dir: trunk/LayoutTests/fast/files/url-required-arguments-expected.txt W: -empty_dir: trunk/LayoutTests/platform/qt/fast/files/url-required-arguments-expected.txt
r97632
= dc6dc893188e888ce61172eb9c406949c794d4c9 (refs/remotes/trunk) First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/trunk. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Vsevolod Vlasov
Comment 3
2011-10-17 11:54:14 PDT
Created
attachment 111292
[details]
Patch
WebKit Review Bot
Comment 4
2011-10-17 11:56:44 PDT
Attachment 111292
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 5
2011-10-17 19:18:44 PDT
Comment on
attachment 111292
[details]
Patch Clearing flags on attachment: 111292 Committed
r97702
: <
http://trac.webkit.org/changeset/97702
>
WebKit Review Bot
Comment 6
2011-10-17 19:18:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug