Web Inspector: Search in resource crashes when there is no resource with given url. https://bugs.webkit.org/show_bug.cgi?id=69767

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/search/search-in-non-existing-resource.html

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::searchInResource):

LayoutTests:

* http/tests/inspector/search/search-in-non-existing-resource-expected.txt: Added.
* http/tests/inspector/search/search-in-non-existing-resource.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@97702 bbb929c8-8fbe-4397-9dbb-9b2b20218538