third_party/WebKit/Source/WebCore/inspector/InspectorPageAgent.cpp
@@ -504,7 +504,8 @@ void InspectorPageAgent::searchInResource(ErrorString*, const String& frameId, c
 
     if (!success) {
         CachedResource* resource = cachedResource(frame, kurl);
-        success = textContentForCachedResource(resource, &content);
+        if (resource)
+            success = textContentForCachedResource(resource, &content);
     }
 
     if (!success)
